# Filexa2ComfyUI

./: .comfyignore  .gitignore  API_CONTRACT.md  CHANGELOG.md  NOTICE.md  README.md  README.ru.md  SECURITY.md  __init__.py  filexa2comfyui.py  plugin_info.json  pyproject.toml  requirements.txt
.github/workflows/: publish_action.yml
web/: filexa2comfyui.css  filexa2comfyui.js
