[project]
name = "filexa2comfyui"
version = "0.2.8"
description = "Run local ComfyUI T2I/I2I/T2V/I2V workflows from Telegram via @FilexaAIBot, using your PC resources for image and video generation."
readme = "README.md"
license = { text = "MIT License" }
requires-python = ">=3.10"
authors = [
    { name = "Filexa" },
]
classifiers = [
    "Operating System :: OS Independent",
]
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[project.urls]
Repository = "https://github.com/Teutonick/Filexa2ComfyUI"
Documentation = "https://github.com/Teutonick/Filexa2ComfyUI#readme"
"Bug Tracker" = "https://github.com/Teutonick/Filexa2ComfyUI/issues"
"Filexa Bot" = "https://t.me/FilexaAIBot"

[tool.comfy]
PublisherId = "teutonick"
DisplayName = "Filexa2ComfyUI"
Icon = "https://raw.githubusercontent.com/Teutonick/Filexa2ComfyUI/main/web/filexa.png"
